[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1"                                   # error handling
bytes = "1"                                     # helps manage buffers
thiserror = "2"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
