[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
thiserror = "2"                                # error handling
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
mio = { version = "1", features = ["os-poll", "net"] }
simple_logger = "5"
log = "0.4.27"
crc64 = "2"
